fix: fixed  Document verification